# libstored.net

./: .editorconfig  .gitignore  Directory.Build.props  Directory.Build.targets  LICENSE.md  LibStored.sln  LibStored.sln.DotSettings  LibStored.slnx  README.md  test-nuget.ps1
.github/workflows/: dotnet.yml  release.yml
examples/: Directory.Build.props
examples/Arq/: ArqStore.st  CMakeLists.txt  Dockerfile  Dockerfile.sdk  LibStored.Net.Arq.sln  README.md  build.sh  main.cpp
examples/Arq/LibStored.Arq/: .gitignore  CMakeLists.txt  Dockerfile  build.sh  main.cpp
examples/Arq/LibStored.Net.Arq.AppHost/: AppHost.cs  LibStored.Net.Arq.AppHost.csproj
examples/Arq/LibStored.Net.Arq.AppHost/Properties/: launchSettings.json
examples/Arq/LibStored.Net.Arq.Console/: ArqStore.json  ArqStore.yml  LibStored.Net.Arq.Console.csproj  PrefixLogger.cs  Program.cs
examples/Arq/LibStored.Net.Arq.ServiceDefaults/: Extensions.cs  LibStored.Net.Arq.ServiceDefaults.csproj
examples/Arq/cmake/: FindLibstored.cmake
examples/LibStored.Net.DebugClient/: DebugClient.cs  LibStored.Net.DebugClient.csproj  Program.cs
examples/LibStored.Net.Example/: ExampleStore.cs  LibStored.Net.Example.csproj  Program.cs
examples/LibStored.Net.Example.AppHost/: Dockerfile  LibStored.Net.Example.AppHost.csproj  Program.cs  ResourceBuilderExtensions.cs
examples/LibStored.Net.Example.Console/: ExampleStore.cs  ExampleSync1.cs  LibStored.Net.Example.Console.csproj  Program.cs
examples/LibStored.Net.Example.ServiceDefaults/: LibStored.Net.Example.ServiceDefaults.csproj
examples/Sync/: README.md
msbuild/: generatorProjects.targets  packaging.targets
python/: ExampleMeta.g.cs.json  ExampleMetaMeta.py  TestStore.g.cs.json  TestStore.g.cs.yml  TestStoreMeta.py  generator.py  requirements.txt  store.cs.tmpl
src/LibStored.Net/: ByteUtils.cs  DebugVariant.cs  Debugger.cs  IHooks.cs  LibStored.Net.csproj  ProtocolBuilder.cs  ServiceCollectionExtensions.cs  Store.cs  StoreVariable.cs  StoreVariant.cs  StoreVariantExtensions.cs  StringUtils.cs  Types.cs  TypesExtensions.cs  Variable.cs  Variant.cs
src/LibStored.Net.Generator/: LibStored.Net.Generator.csproj  README.md  ScribanGenerator.cs  StoreDiagnosticsDescriptors.cs  StoreGenerator.cs  StoreModel.cs  StoreModelValidator.cs  StoreYaml.cs
test/: Directory.Build.props
test/LibStored.Net.Generator.Tests/: CustomAdditionalText.cs  LibStored.Net.Generator.Tests.csproj  ModuleInitializer.cs  StoreGeneratorSnapshotTests.cs  TestHelper.cs  TestStore.json  TestStore.yml
(+71 files in other folders)
